--- a/views/staff/preview.jade
+++ b/views/staff/preview.jade
@@ -2,10 +2,15 @@ extends ./layout
 
 block content
 	.row
+		if img
+			.col-sm-4.col-sm-offset-1
+				img.img-responsive(src="/util/articleimage/#{article._id}")
+		.col-sm-2.preview-btns
+			a.btn.btn-primary(href="/staff/editarticle/#{article._id}") Edit
+			a.btn.btn-info(href="/staff/allarticles") Back
+	br
+	.row
 		h1.col-sm-8.col-sm-offset-1.storyTitle=title
-		.col-sm-2.pull-right
-			a.btn.btn-primary.btn-circle.btn-lg(href="/staff/editarticle/#{article._id}", title="Edit")
-				span.glyphicon.glyphicon-pencil
 		if article.subtitle
 			h2.col-sm-8.col-sm-offset-1.subhead
 				small=article.subtitle
@@ -16,10 +21,5 @@ block content
 					| #{authorlist[0]}
 				default
 					| #{authorlist.split(', ')}
-	if img
-		.row
-			.col-sm-4.col-sm-offset-1
-				img.img-responsive(src="/util/articleimage/#{article._id}")
-	br
 	.row
 		.col-sm-8.col-sm-offset-1.story!=article.body
