--- a/views/public/page/footer.jade
+++ b/views/public/page/footer.jade
@@ -8,4 +8,5 @@
 		li
 			a.i.fa.fa-facebook.text-primary(href='https://www.facebook.com/VeracityNU')
 	#copyright
-		p.text-muted.text-center: small Copyright &copy; 2014 Veracity Magazine. All rights reserved.
+		- var year = new Date()
+		p.text-muted.text-center: small Copyright &copy; #{year.getFullYear()} Veracity Magazine. All rights reserved.
