--- a/views/public/page/head.jade
+++ b/views/public/page/head.jade
@@ -7,6 +7,7 @@ link(rel='stylesheet', href='/stylesheets/bootstrap.css')
 link(rel='stylesheet', href='/stylesheets/main.css')
 link(rel='stylesheet', href='/stylesheets/page.css')
 link(rel='stylesheet', href='/stylesheets/carousel.css')
+link(rel='stylesheet', href='/stylesheets/author-page.css')
 link(href='https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css', rel='stylesheet')
 // if lt IE 9
 	script(src='https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js')
