--- a/views/staff/page/footer.jade
+++ b/views/staff/page/footer.jade
@@ -1,3 +1,4 @@
 .footer#userfooter
 	#copyright
-		p.text-muted.text-center: small Copyright &copy; 2014 Veracity Magazine. All rights reserved.
+		- var year = new Date()
+		p.text-muted.text-center: small Copyright &copy; #{year.getFullYear()} Veracity Magazine. All rights reserved.
