style additions, latest, related

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -19,31 +19,32 @@ body {
   font-size: 14px;
   font-family: 'Verlag Book' !important;
 }
-a {
-  color: gray;
-  color: #00b7ff;
-}
+
 header {
 	position: absolute;
 	top: 0;
 	left: 0;
 	width: 100%;
 }
+
 .row h3 {
 	text-align: center;
 	padding-bottom: 20px;
 }
+
 #logo {
 	text-align: center;
 	padding-top: 20px;
 	padding-bottom: 15px;
 	margin: 0 auto;
 }
+
 #stories .thumbnail {
 	padding-top: 10px;
 	border: hidden;
 	background-collapse: transparent !important;
 }
+
 #topNav ul li {
 	font-size: 16px;
 }
@@ -74,17 +75,17 @@ header {
 	padding-right: 30px;
 	padding-left: 30px;  
 }
-.navbar-default .navbar-nav > li > a:hover {
-	color: #5fc2b0;
-}
-.navbar-default .navbar-nav > li:first-child > a:hover {
+.journey:hover {
 	color: #fac411 !important;
+	text-decoration: none !important;
 }
-.navbar-default .navbar-nav > li:last-child > a:hover {
+.lifeandculture:hover {
+	color: #5fc2b0 !important;
+	text-decoration: none !important;
+}
+.campus:hover {
 	color: #A086C5 !important;
-}
-#topNav .navbar-default .navbar-right > li > a:hover{
-	color: #3399f3 !important;
+	text-decoration: none !important;
 }
 
 .navbar-brand {padding:0 !important;}
@@ -153,6 +154,7 @@ body:before {
 .check .btn span.glyphicon {    			
 	opacity: 0;				
 }
+
 .check .btn.active span.glyphicon {				
 	opacity: 1;				
 }
