--- a/views/public/index.jade
+++ b/views/public/index.jade
@@ -39,7 +39,15 @@ block content
 					.thumbnail.article-thumbnail
 						a(href="/mag/#{article.section}/#{article._id}") 
 							img.img-responsive.img-rounded(src="/util/articleimage/#{article._id}", alt=article.title)
-							.caption
+							- var sect = article.section.toLowerCase().replace(' & ', 'and');
+							case article.section
+								when 'Bloom'
+									- sect = 'journey'
+								when 'Gray Areas'
+									- sect = 'lifeandculture'
+								when 'Vera in the City'
+									- sect = 'campus'
+							.caption(class=sect)
 								h6=article.section
 								h4.storyTitle=article.title
 								p.subhead=article.subtitle
