--- a/views/public/page/logo.jade
+++ b/views/public/page/logo.jade
@@ -14,8 +14,8 @@
 			.collapse.navbar-collapse#bs-example-navbar-collapse-2
 				ul.nav.navbar-nav
 					li
-						a(href="/mag/journey") Journey
+						a.journey(href="/mag/journey") Journey
 					li
-						a(href="/mag/lifeandculture") Life &amp; Culture
+						a.lifeandculture(href="/mag/lifeandculture") Life &amp; Culture
 					li
-						a(href="/mag/campus") Campus
+						a.campus(href="/mag/campus") Campus
