--- a/public/stylesheets/bootstrap.css
+++ b/public/stylesheets/bootstrap.css
@@ -50,6 +50,7 @@ a {
 a:active,
 a:hover {
   outline: 0;
+  text-decoration: none !important;
 }
 abbr[title] {
   border-bottom: 1px dotted;
@@ -375,7 +376,6 @@ h6,
 .h6 {
   font-weight: 500;
   line-height: 1.1;
-  color: #2d2d2d;
 }
 h1 small,
 h2 small,
