--- a/views/public/article.jade
+++ b/views/public/article.jade
@@ -4,7 +4,7 @@ block content
 	if img
 		.row
 			.col-sm-4.col-sm-offset-1
-				img.img-responsive(src="/util/articleimage/#{article._id}")
+				img.img-articlepage.img-responsive(src="/util/articleimage/#{article._id}")
 	.row
 		h1.col-sm-8.col-sm-offset-1.storyTitle=title
 		h2.col-sm-8.col-sm-offset-1.subhead
