--- a/public/stylesheets/carousel.css
+++ b/public/stylesheets/carousel.css
@@ -6,12 +6,11 @@
 }
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
-  z-index: 10;
-  background-color: black; 
+  position: absolute;
+  z-index: 10; 
   height: auto;
   background-color:rgba(192,192,192, 0.6);
   width: 100% !important;
-  margin-left: -188px;
 }
 /* Declare heights because of positioning of img element */
 .carousel .item {
