--- a/public/stylesheets/carousel.css
+++ b/public/stylesheets/carousel.css
@@ -9,8 +9,8 @@
   position: absolute;
   z-index: 10; 
   height: auto;
-  background-color:rgba(192,192,192, 0.6);
-  width: 100% !important;
+  background-color:rgba(192,192,192, 0.7);
+  padding: 0 100px;
 }
 /* Declare heights because of positioning of img element */
 .carousel .item {
@@ -24,9 +24,13 @@
   min-width: 100%;
   height: 500px;
 }
+.carousel-inner h1 {
+  margin: 10px 0;
+}
 .carousel-inner p {
  /* background: #555;
   border-radius: 10px;*/
   font-size: 20px;
   color: black;
+  margin-bottom: 10px;
 }
