--- a/views/public/index.jade
+++ b/views/public/index.jade
@@ -2,7 +2,7 @@ extends layout
 block content
 	include page/logo
 	#myCarousel.carousel.slide(data-ride="carousel")
-		ol.carousel-indicators
+		//- ol.carousel-indicators
 			li.active(data-target="#myCarousel", data-slide-to="0")
 			li(data-target="#myCarousel", data-slide-to="1")
 			li(data-target="#myCarousel", data-slide-to="2")
