--- a/views/public/index.jade
+++ b/views/public/index.jade
@@ -38,7 +38,7 @@ block content
 				.col-xs-12.col-sm-6.col-md-4
 					.thumbnail.article-thumbnail
 						a(href="/mag/#{article.section}/#{article._id}") 
-							img.img-responsive.img-rounded(src="/util/articleimage/#{article._id}", alt=article.title)
+							img.img-responsive(src="/util/articleimage/#{article._id}", alt=article.title)
 							- var sect = article.section.toLowerCase().replace(' & ', 'and');
 							case article.section
 								when 'Bloom'
