About & Facebook links moved up next to Magazine PDF link

--- a/views/public/page/footer.jade
+++ b/views/public/page/footer.jade
@@ -1,6 +1,6 @@
 .footer#publicfooter
 	br
-	ul.list-inline.text-center
+	//ul.list-inline.text-center
 		li 
 			a(href="/about") About
 		li
@@ -9,4 +9,5 @@
 			a.i.fa.fa-facebook.text-primary(href='https://www.facebook.com/VeracityNU')
 	#copyright
 		- var year = new Date()
+		br
 		p.text-muted.text-center: small Copyright &copy; #{year.getFullYear()} Veracity Magazine. All rights reserved.
