--- a/views/public/page/header.jade
+++ b/views/public/page/header.jade
@@ -18,4 +18,6 @@ header
 							li: a.lifeandculture(href="/mag/lifeandculture") Life &amp; Culture
 							li: a.campus(href="/mag/campus") Campus
 					ul.nav.navbar-right.navbar-nav
+						li: a(href="/about") About
+						li: a.i.fa.fa-facebook.text-primary(href='https://www.facebook.com/VeracityNU')
 						li: a(target="_blank", href="http://issuu.com/veracitymagazine/docs/veracity_final_issue1_") Magazine PDF
